--- a/package.json
+++ b/package.json
@@ -19,14 +19,8 @@
     "lint": "tsc --noEmit",
     "prepublishOnly": "pnpm build"
   },
-  "main": "./dist/src/index.js",
-  "types": "./dist/src/index.d.ts",
   "exports": {
-    ".": {
-      "types": "./dist/src/index.d.ts",
-      "import": "./dist/src/index.js",
-      "require": "./dist/src/index.js"
-    }
+    ".": "./dist/src/index.js"
   },
   "sideEffects": false,
   "files": [
